--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ xcode_workspace: UIImage-SVG.xcworkspace
 xcode_scheme: UIImage-SVG
 xcode_sdk: iphonesimulator7.0
 
+
+before_install:
+- gem install --no-ri --no-rdoc cocoapods
+
 after_success:
 - brew install appledoc ncftp
 - mkdir docs
